--- a/index.html
+++ b/index.html
@@ -41,10 +41,24 @@
                 ducimus tempora, fuga odio aliquid!</p>
         </div>
         <div class="flexbox-item six">
-            <iframe width="300" src="https://www.youtube.com/embed/uHFzG2Q1AhI" frameborder="0"
+            <iframe width="400" src="https://www.youtube.com/embed/uHFzG2Q1AhI" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
+    </div>
+
+    <div class="flexbox-container c3">
+        <div class="flexbox-item seven">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quidem expedita sed dolorum
+                necessitatibus repellendus distinctio numquam ipsa, eos quaerat odio eius illo eligendi qui repellat et
+                non praesentium consequuntur.</p>
+        </div>
+        <div class="flexbox-item eight"> <img src="Spain.jpg" width="300"> </div>
+        <div class="flexbox-item nine"> <iframe width="400" src="https://www.youtube.com/embed/0cHbqAIw4zc"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe></div>
+
     </div>
 
 </body>
