--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
 <body>
     <h1>Travel Blog</h1>
+    <br>
     <h2>Discover Galapagos Islands Today!</h2>
-    <div class="flexbox-container">
+    <div class="flexbox-container c1">
         <div class="flexbox-item one">
-            <img src="Galapagos Islands.jpg" width="300">
+            <img src="Galapagos Islands.jpg" width="400">
         </div>
         <div class="flexbox-item two">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem nesciunt ab ipsum at. Quis, voluptate. Ad
@@ -29,11 +30,11 @@
             </aside>
         </div>
     </div>
-
+    <br>
     <h2>Discover Holbox Island Today!</h2>
     <div class="flexbox-container c2">
         <div class="flexbox-item four">
-            <img src="Holbox.jpg" width="300px">
+            <img src="Holbox.jpg" width="400px">
         </div>
         <div class="flexbox-item five">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea pariatur consequuntur deleniti quis,
@@ -41,20 +42,21 @@
                 ducimus tempora, fuga odio aliquid!</p>
         </div>
         <div class="flexbox-item six">
-            <iframe width="400" src="https://www.youtube.com/embed/uHFzG2Q1AhI" frameborder="0"
+            <iframe width="400" height="300" src="https://www.youtube.com/embed/uHFzG2Q1AhI" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
     </div>
-
+    <br>
+    <h2>Discover Spain Today!</h2>
     <div class="flexbox-container c3">
         <div class="flexbox-item seven">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quidem expedita sed dolorum
                 necessitatibus repellendus distinctio numquam ipsa, eos quaerat odio eius illo eligendi qui repellat et
                 non praesentium consequuntur.</p>
         </div>
-        <div class="flexbox-item eight"> <img src="Spain.jpg" width="300"> </div>
-        <div class="flexbox-item nine"> <iframe width="400" src="https://www.youtube.com/embed/0cHbqAIw4zc"
+        <div class="flexbox-item eight"> <img src="Spain.jpg" width="400"> </div>
+        <div class="flexbox-item nine"> <iframe width="400" height="300" src="https://www.youtube.com/embed/0cHbqAIw4zc"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe></div>
